@@ -67,3 +67,4 @@
   19-Sep-2023  - V0.75 Update testCache and reload methods for target providers;
                        Make CARDTargetOntologyProvider stashable;
                        Add try/except for chembl_webresource_client.new_client imports in ChEMBL providers in case of service downtime
+  21-Sep-2023  - V0.76 Additional updates to testCache and reload methods for target providers
